# flaty

./: .dockerignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  justfile
.github/workflows/: docker-image.yml  docker.yml
example_site/: _config.toml  page.md
example_site/_style/: default.html  wide.html  wide.scss
example_site/about/: page.md
src/: cache.rs  filecache.rs  main.rs  markdown.rs  sass.rs  url.rs  web.rs
src/cache/: base.rs  cacheable.rs  digest.rs  mod.rs
