[package]
name = "flaty"
version = "0.0.2"
edition = "2021"
authors = ["Yann Villessuzanne"]
description = "Flat-File CMS"
license = "AGPL-3.0-only"
repository = "https://github.com/linfir/flaty"
keywords = ["http", "web", "server", "cms"]

[dependencies]
anyhow = "1.0.70"
camino = "1.1.4"
clap = { version = "4.2.2", features = ["derive"] }
handlebars = "4.3.6"
hyper = { version = "0.14.26", features = ["server", "http1", "tcp", "stream"] }
mime_guess = "2.0.4"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
rsass = "0.27.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "signal"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twox-hash = "1.6.3"
