[package]
name = "flaty"
version = "0.0.2"
edition = "2021"
authors = ["Yann Villessuzanne"]
description = "Flat-File CMS"
license = "AGPL-3.0-only"
repository = "https://github.com/linfir/flaty"
keywords = ["http", "web", "server", "cms"]

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["macros"] }
camino = "1.1.4"
clap = { version = "4.2.2", features = ["derive"] }
dashmap = "5.4.0"
handlebars = "4.3.6"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
rsass = "0.27.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
toml = "0.7.3"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twox-hash = "1.6.3"
