[package]
name = "flaty"
version = "0.0.2"
edition = "2021"
authors = ["Yann Villessuzanne"]
description = "Flat-File CMS"
license = "AGPL-3.0-only"
repository = "https://github.com/linfir/flaty"
keywords = ["http", "web", "server", "cms"]
publish = false

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.8.9", features = ["macros"] }
camino = "1.1.4"
clap = { version = "4.2.2", features = ["derive"] }
dashmap = "6.2.1"
handlebars = "6.4.3"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
pulldown-cmark = "0.13.4"
rsass = "0.29.2"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "time", "signal", "net"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twox-hash = "2.1.2"
